--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=contas
-# Configurações do DataSource
-spring.datasource.url=jdbc:postgresql://localhost:5432/contas_db
-spring.datasource.username=seu_usuario
-spring.datasource.password=sua_senha
+spring.datasource.url=jdbc:postgresql://localhost:5432/contas
+spring.datasource.username=postgres
+spring.datasource.password=123456
 
-# Configurações do JPA e Hibernate
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configurações do Flyway
-spring.flyway.enabled=true
+
+spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
+spring.flyway.url=jdbc:postgresql://localhost:5432/contas
+spring.flyway.user=postgres
+spring.flyway.password=123456
+
+spring.devtools.restart.enabled=false
