--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,32 @@
 version: '3.8'
+
 services:
   postgres:
     image: postgres:13
     container_name: postgres
     environment:
       POSTGRES_DB: contas_db
-      POSTGRES_USER: seu_usuario
-      POSTGRES
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123456
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+  app:
+    image: contas-api
+    container_name: contas-app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/contas_db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: 123456
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+
+volumes:
+  postgres-data:
